Chapter11/kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: example
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: frontend.example.local
          http:
            paths:
              - backend:
                  service:
                    name: frontend-service
                    port:
                      number: 80
                path: /
                pathType: Prefix
